# Pipe

./: Basic.hs  LICENSE  README.md  pipe.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lib.hs
src/Language/: PipeScript.hs
src/Language/PipeScript/: Parser.hs
src/Language/PipeScript/Interpreter/: Context.hs  Eval.hs  PipeLibrary.hs  Task.hs
src/Language/PipeScript/Parser/: Basic.hs  Expression.hs  Statement.hs  TopLevel.hs
test/: Example.pipe  Spec.hs  TestParser.hs
