name:                pipe
version:             0.1.0.0
-- synopsis:
description:         Build System for game assets.
homepage:            https://github.com/Strrationalism/Pipe
license:             MIT
license-file:        LICENSE
author:              Strrationalism
maintainer:          853974536@qq.com
copyright:           2021 Strrationalism
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.PipeScript
                     , Language.PipeScript.Parser.Basic
                     , Language.PipeScript.Parser.Expression
                     , Language.PipeScript.Parser.Statement
                     , Language.PipeScript.Parser.TopLevel
                     , Language.PipeScript.Parser
                     , Language.PipeScript.Interpreter.Context
                     , Language.PipeScript.Interpreter.Eval
                     , Language.PipeScript.Interpreter.Library
                     
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , path
                     , path-io
                     , unordered-containers
                     , mtl
                     , hashable
                     , process
  default-language:    Haskell2010

executable pipe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipe
                     , path
                     , path-io
  default-language:    Haskell2010

test-suite pipe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipe
                     , hspec
                     , QuickCheck
                     , parsec
                     , text
                     , path
                     , path-io
  other-modules:       TestParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Strrationalism/Pipe
